; ModuleID = '/home/carl/AnghaBench/i3/testcases/extr_inject_randr1.5.c_cleanup_socket.c'
source_filename = "/home/carl/AnghaBench/i3/testcases/extr_inject_randr1.5.c_cleanup_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sun_path = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup_socket() #0 {
  %1 = load i32*, i32** @sun_path, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32*, i32** @sun_path, align 8
  %5 = call i32 @unlink(i32* %4)
  %6 = load i32*, i32** @sun_path, align 8
  %7 = call i32 @free(i32* %6)
  store i32* null, i32** @sun_path, align 8
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @unlink(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
